python/parser/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Unused terminals:

    BLOCK_COMMENT
    LINE_COMMENT
    EXTENDS

Grammar

Rule 0     S' -> goal
Rule 1     empty -> <empty>
Rule 2     field_modifier -> REQUIRED
Rule 3     field_modifier -> OPTIONAL
Rule 4     field_modifier -> REPEATED
Rule 5     primitive_type -> DOUBLE
Rule 6     primitive_type -> FLOAT
Rule 7     primitive_type -> INT32
Rule 8     primitive_type -> INT64
Rule 9     primitive_type -> UINT32
Rule 10    primitive_type -> UINT64
Rule 11    primitive_type -> SINT32
Rule 12    primitive_type -> SINT64
Rule 13    primitive_type -> FIXED32
Rule 14    primitive_type -> FIXED64
Rule 15    primitive_type -> SFIXED32
Rule 16    primitive_type -> SFIXED64
Rule 17    primitive_type -> BOOL
Rule 18    primitive_type -> STRING
Rule 19    primitive_type -> BYTES
Rule 20    field_id -> NUM
Rule 21    rvalue -> NUM
Rule 22    rvalue -> TRUE
Rule 23    rvalue -> FALSE
Rule 24    rvalue -> NAME
Rule 25    field_directive -> LBRACK NAME EQ rvalue RBRACK
Rule 26    field_directive_times -> field_directive_plus
Rule 27    field_directive_times -> empty
Rule 28    field_directive_plus -> field_directive
Rule 29    field_directive_plus -> field_directive_plus field_directive
Rule 30    dotname -> NAME
Rule 31    dotname -> dotname DOT NAME
Rule 32    field_name -> NAME
Rule 33    field_name -> MESSAGE
Rule 34    field_name -> MAX
Rule 35    field_type -> primitive_type
Rule 36    field_type -> dotname
Rule 37    field_definition -> field_modifier field_type field_name EQ field_id field_directive_times SEMI
Rule 38    enum_field -> field_name EQ NUM SEMI
Rule 39    enum_body_part -> enum_field
Rule 40    enum_body_part -> option_directive
Rule 41    enum_body -> enum_body_part
Rule 42    enum_body -> enum_body enum_body_part
Rule 43    enum_body_opt -> empty
Rule 44    enum_body_opt -> enum_body
Rule 45    enum_definition -> ENUM NAME LBRACE enum_body_opt RBRACE
Rule 46    extensions_to -> MAX
Rule 47    extensions_to -> NUM
Rule 48    extensions_definition -> EXTENSIONS NUM TO extensions_to SEMI
Rule 49    message_extension -> EXTEND NAME LBRACE message_body RBRACE
Rule 50    message_body_part -> field_definition
Rule 51    message_body_part -> enum_definition
Rule 52    message_body_part -> message_definition
Rule 53    message_body_part -> extensions_definition
Rule 54    message_body_part -> message_extension
Rule 55    message_body -> empty
Rule 56    message_body -> message_body_part
Rule 57    message_body -> message_body message_body_part
Rule 58    message_definition -> MESSAGE NAME LBRACE message_body RBRACE
Rule 59    method_definition -> RPC NAME LPAR NAME RPAR RETURNS LPAR NAME RPAR
Rule 60    method_definition_opt -> empty
Rule 61    method_definition_opt -> method_definition
Rule 62    method_definition_opt -> method_definition_opt method_definition
Rule 63    service_definition -> SERVICE NAME LBRACE method_definition_opt RBRACE
Rule 64    package_directive -> PACKAGE dotname SEMI
Rule 65    import_directive -> IMPORT STRING_LITERAL SEMI
Rule 66    option_rvalue -> NUM
Rule 67    option_rvalue -> TRUE
Rule 68    option_rvalue -> FALSE
Rule 69    option_rvalue -> STRING_LITERAL
Rule 70    option_rvalue -> NAME
Rule 71    option_directive -> OPTION NAME EQ option_rvalue SEMI
Rule 72    topLevel -> message_definition
Rule 73    topLevel -> message_extension
Rule 74    topLevel -> enum_definition
Rule 75    topLevel -> service_definition
Rule 76    topLevel -> import_directive
Rule 77    topLevel -> option_directive
Rule 78    package_definition -> package_directive
Rule 79    package_definition -> empty
Rule 80    statements -> topLevel
Rule 81    statements -> statements topLevel
Rule 82    statements -> empty
Rule 83    protofile -> package_definition statements
Rule 84    goal -> STARTTOKEN protofile

Terminals, with rules where they appear

BLOCK_COMMENT        : 
BOOL                 : 17
BYTES                : 19
DOT                  : 31
DOUBLE               : 5
ENUM                 : 45
EQ                   : 25 37 38 71
EXTEND               : 49
EXTENDS              : 
EXTENSIONS           : 48
FALSE                : 23 68
FIXED32              : 13
FIXED64              : 14
FLOAT                : 6
IMPORT               : 65
INT32                : 7
INT64                : 8
LBRACE               : 45 49 58 63
LBRACK               : 25
LINE_COMMENT         : 
LPAR                 : 59 59
MAX                  : 34 46
MESSAGE              : 33 58
NAME                 : 24 25 30 31 32 45 49 58 59 59 59 63 70 71
NUM                  : 20 21 38 47 48 66
OPTION               : 71
OPTIONAL             : 3
PACKAGE              : 64
RBRACE               : 45 49 58 63
RBRACK               : 25
REPEATED             : 4
REQUIRED             : 2
RETURNS              : 59
RPAR                 : 59 59
RPC                  : 59
SEMI                 : 37 38 48 64 65 71
SERVICE              : 63
SFIXED32             : 15
SFIXED64             : 16
SINT32               : 11
SINT64               : 12
STARTTOKEN           : 84
STRING               : 18
STRING_LITERAL       : 65 69
TO                   : 48
TRUE                 : 22 67
UINT32               : 9
UINT64               : 10
error                : 

Nonterminals, with rules where they appear

dotname              : 31 36 64
empty                : 27 43 55 60 79 82
enum_body            : 42 44
enum_body_opt        : 45
enum_body_part       : 41 42
enum_definition      : 51 74
enum_field           : 39
extensions_definition : 53
extensions_to        : 48
field_definition     : 50
field_directive      : 28 29
field_directive_plus : 26 29
field_directive_times : 37
field_id             : 37
field_modifier       : 37
field_name           : 37 38
field_type           : 37
goal                 : 0
import_directive     : 76
message_body         : 49 57 58
message_body_part    : 56 57
message_definition   : 52 72
message_extension    : 54 73
method_definition    : 61 62
method_definition_opt : 62 63
option_directive     : 40 77
option_rvalue        : 71
package_definition   : 83
package_directive    : 78
primitive_type       : 35
protofile            : 84
rvalue               : 25
service_definition   : 75
statements           : 81 83
topLevel             : 80 81

Parsing method: LALR

state 0

    (0) S' -> . goal
    (84) goal -> . STARTTOKEN protofile

    STARTTOKEN      shift and go to state 1

    goal                           shift and go to state 2

state 1

    (84) goal -> STARTTOKEN . protofile
    (83) protofile -> . package_definition statements
    (78) package_definition -> . package_directive
    (79) package_definition -> . empty
    (64) package_directive -> . PACKAGE dotname SEMI
    (1) empty -> .

    PACKAGE         shift and go to state 4
    MESSAGE         reduce using rule 1 (empty -> .)
    EXTEND          reduce using rule 1 (empty -> .)
    ENUM            reduce using rule 1 (empty -> .)
    SERVICE         reduce using rule 1 (empty -> .)
    IMPORT          reduce using rule 1 (empty -> .)
    OPTION          reduce using rule 1 (empty -> .)
    $end            reduce using rule 1 (empty -> .)

    package_directive              shift and go to state 3
    protofile                      shift and go to state 5
    package_definition             shift and go to state 6
    empty                          shift and go to state 7

state 2

    (0) S' -> goal .



state 3

    (78) package_definition -> package_directive .

    MESSAGE         reduce using rule 78 (package_definition -> package_directive .)
    EXTEND          reduce using rule 78 (package_definition -> package_directive .)
    ENUM            reduce using rule 78 (package_definition -> package_directive .)
    SERVICE         reduce using rule 78 (package_definition -> package_directive .)
    IMPORT          reduce using rule 78 (package_definition -> package_directive .)
    OPTION          reduce using rule 78 (package_definition -> package_directive .)
    $end            reduce using rule 78 (package_definition -> package_directive .)


state 4

    (64) package_directive -> PACKAGE . dotname SEMI
    (30) dotname -> . NAME
    (31) dotname -> . dotname DOT NAME

    NAME            shift and go to state 9

    dotname                        shift and go to state 8

state 5

    (84) goal -> STARTTOKEN protofile .

    $end            reduce using rule 84 (goal -> STARTTOKEN protofile .)


state 6

    (83) protofile -> package_definition . statements
    (80) statements -> . topLevel
    (81) statements -> . statements topLevel
    (82) statements -> . empty
    (72) topLevel -> . message_definition
    (73) topLevel -> . message_extension
    (74) topLevel -> . enum_definition
    (75) topLevel -> . service_definition
    (76) topLevel -> . import_directive
    (77) topLevel -> . option_directive
    (1) empty -> .
    (58) message_definition -> . MESSAGE NAME LBRACE message_body RBRACE
    (49) message_extension -> . EXTEND NAME LBRACE message_body RBRACE
    (45) enum_definition -> . ENUM NAME LBRACE enum_body_opt RBRACE
    (63) service_definition -> . SERVICE NAME LBRACE method_definition_opt RBRACE
    (65) import_directive -> . IMPORT STRING_LITERAL SEMI
    (71) option_directive -> . OPTION NAME EQ option_rvalue SEMI

  ! shift/reduce conflict for MESSAGE resolved as shift
  ! shift/reduce conflict for EXTEND resolved as shift
  ! shift/reduce conflict for ENUM resolved as shift
  ! shift/reduce conflict for SERVICE resolved as shift
  ! shift/reduce conflict for IMPORT resolved as shift
  ! shift/reduce conflict for OPTION resolved as shift
    $end            reduce using rule 1 (empty -> .)
    MESSAGE         shift and go to state 24
    EXTEND          shift and go to state 14
    ENUM            shift and go to state 20
    SERVICE         shift and go to state 12
    IMPORT          shift and go to state 16
    OPTION          shift and go to state 11

  ! MESSAGE         [ reduce using rule 1 (empty -> .) ]
  ! EXTEND          [ reduce using rule 1 (empty -> .) ]
  ! ENUM            [ reduce using rule 1 (empty -> .) ]
  ! SERVICE         [ reduce using rule 1 (empty -> .) ]
  ! IMPORT          [ reduce using rule 1 (empty -> .) ]
  ! OPTION          [ reduce using rule 1 (empty -> .) ]

    message_definition             shift and go to state 18
    statements                     shift and go to state 10
    message_extension              shift and go to state 15
    import_directive               shift and go to state 19
    enum_definition                shift and go to state 22
    service_definition             shift and go to state 13
    option_directive               shift and go to state 21
    topLevel                       shift and go to state 23
    empty                          shift and go to state 17

state 7

    (79) package_definition -> empty .

    MESSAGE         reduce using rule 79 (package_definition -> empty .)
    EXTEND          reduce using rule 79 (package_definition -> empty .)
    ENUM            reduce using rule 79 (package_definition -> empty .)
    SERVICE         reduce using rule 79 (package_definition -> empty .)
    IMPORT          reduce using rule 79 (package_definition -> empty .)
    OPTION          reduce using rule 79 (package_definition -> empty .)
    $end            reduce using rule 79 (package_definition -> empty .)


state 8

    (64) package_directive -> PACKAGE dotname . SEMI
    (31) dotname -> dotname . DOT NAME

    SEMI            shift and go to state 26
    DOT             shift and go to state 25


state 9

    (30) dotname -> NAME .

    SEMI            reduce using rule 30 (dotname -> NAME .)
    DOT             reduce using rule 30 (dotname -> NAME .)
    NAME            reduce using rule 30 (dotname -> NAME .)
    MESSAGE         reduce using rule 30 (dotname -> NAME .)
    MAX             reduce using rule 30 (dotname -> NAME .)


state 10

    (83) protofile -> package_definition statements .
    (81) statements -> statements . topLevel
    (72) topLevel -> . message_definition
    (73) topLevel -> . message_extension
    (74) topLevel -> . enum_definition
    (75) topLevel -> . service_definition
    (76) topLevel -> . import_directive
    (77) topLevel -> . option_directive
    (58) message_definition -> . MESSAGE NAME LBRACE message_body RBRACE
    (49) message_extension -> . EXTEND NAME LBRACE message_body RBRACE
    (45) enum_definition -> . ENUM NAME LBRACE enum_body_opt RBRACE
    (63) service_definition -> . SERVICE NAME LBRACE method_definition_opt RBRACE
    (65) import_directive -> . IMPORT STRING_LITERAL SEMI
    (71) option_directive -> . OPTION NAME EQ option_rvalue SEMI

    $end            reduce using rule 83 (protofile -> package_definition statements .)
    MESSAGE         shift and go to state 24
    EXTEND          shift and go to state 14
    ENUM            shift and go to state 20
    SERVICE         shift and go to state 12
    IMPORT          shift and go to state 16
    OPTION          shift and go to state 11

    message_definition             shift and go to state 18
    message_extension              shift and go to state 15
    import_directive               shift and go to state 19
    enum_definition                shift and go to state 22
    service_definition             shift and go to state 13
    option_directive               shift and go to state 21
    topLevel                       shift and go to state 27

state 11

    (71) option_directive -> OPTION . NAME EQ option_rvalue SEMI

    NAME            shift and go to state 28


state 12

    (63) service_definition -> SERVICE . NAME LBRACE method_definition_opt RBRACE

    NAME            shift and go to state 29


state 13

    (75) topLevel -> service_definition .

    MESSAGE         reduce using rule 75 (topLevel -> service_definition .)
    EXTEND          reduce using rule 75 (topLevel -> service_definition .)
    ENUM            reduce using rule 75 (topLevel -> service_definition .)
    SERVICE         reduce using rule 75 (topLevel -> service_definition .)
    IMPORT          reduce using rule 75 (topLevel -> service_definition .)
    OPTION          reduce using rule 75 (topLevel -> service_definition .)
    $end            reduce using rule 75 (topLevel -> service_definition .)


state 14

    (49) message_extension -> EXTEND . NAME LBRACE message_body RBRACE

    NAME            shift and go to state 30


state 15

    (73) topLevel -> message_extension .

    MESSAGE         reduce using rule 73 (topLevel -> message_extension .)
    EXTEND          reduce using rule 73 (topLevel -> message_extension .)
    ENUM            reduce using rule 73 (topLevel -> message_extension .)
    SERVICE         reduce using rule 73 (topLevel -> message_extension .)
    IMPORT          reduce using rule 73 (topLevel -> message_extension .)
    OPTION          reduce using rule 73 (topLevel -> message_extension .)
    $end            reduce using rule 73 (topLevel -> message_extension .)


state 16

    (65) import_directive -> IMPORT . STRING_LITERAL SEMI

    STRING_LITERAL  shift and go to state 31


state 17

    (82) statements -> empty .

    MESSAGE         reduce using rule 82 (statements -> empty .)
    EXTEND          reduce using rule 82 (statements -> empty .)
    ENUM            reduce using rule 82 (statements -> empty .)
    SERVICE         reduce using rule 82 (statements -> empty .)
    IMPORT          reduce using rule 82 (statements -> empty .)
    OPTION          reduce using rule 82 (statements -> empty .)
    $end            reduce using rule 82 (statements -> empty .)


state 18

    (72) topLevel -> message_definition .

    MESSAGE         reduce using rule 72 (topLevel -> message_definition .)
    EXTEND          reduce using rule 72 (topLevel -> message_definition .)
    ENUM            reduce using rule 72 (topLevel -> message_definition .)
    SERVICE         reduce using rule 72 (topLevel -> message_definition .)
    IMPORT          reduce using rule 72 (topLevel -> message_definition .)
    OPTION          reduce using rule 72 (topLevel -> message_definition .)
    $end            reduce using rule 72 (topLevel -> message_definition .)


state 19

    (76) topLevel -> import_directive .

    MESSAGE         reduce using rule 76 (topLevel -> import_directive .)
    EXTEND          reduce using rule 76 (topLevel -> import_directive .)
    ENUM            reduce using rule 76 (topLevel -> import_directive .)
    SERVICE         reduce using rule 76 (topLevel -> import_directive .)
    IMPORT          reduce using rule 76 (topLevel -> import_directive .)
    OPTION          reduce using rule 76 (topLevel -> import_directive .)
    $end            reduce using rule 76 (topLevel -> import_directive .)


state 20

    (45) enum_definition -> ENUM . NAME LBRACE enum_body_opt RBRACE

    NAME            shift and go to state 32


state 21

    (77) topLevel -> option_directive .

    MESSAGE         reduce using rule 77 (topLevel -> option_directive .)
    EXTEND          reduce using rule 77 (topLevel -> option_directive .)
    ENUM            reduce using rule 77 (topLevel -> option_directive .)
    SERVICE         reduce using rule 77 (topLevel -> option_directive .)
    IMPORT          reduce using rule 77 (topLevel -> option_directive .)
    OPTION          reduce using rule 77 (topLevel -> option_directive .)
    $end            reduce using rule 77 (topLevel -> option_directive .)


state 22

    (74) topLevel -> enum_definition .

    MESSAGE         reduce using rule 74 (topLevel -> enum_definition .)
    EXTEND          reduce using rule 74 (topLevel -> enum_definition .)
    ENUM            reduce using rule 74 (topLevel -> enum_definition .)
    SERVICE         reduce using rule 74 (topLevel -> enum_definition .)
    IMPORT          reduce using rule 74 (topLevel -> enum_definition .)
    OPTION          reduce using rule 74 (topLevel -> enum_definition .)
    $end            reduce using rule 74 (topLevel -> enum_definition .)


state 23

    (80) statements -> topLevel .

    MESSAGE         reduce using rule 80 (statements -> topLevel .)
    EXTEND          reduce using rule 80 (statements -> topLevel .)
    ENUM            reduce using rule 80 (statements -> topLevel .)
    SERVICE         reduce using rule 80 (statements -> topLevel .)
    IMPORT          reduce using rule 80 (statements -> topLevel .)
    OPTION          reduce using rule 80 (statements -> topLevel .)
    $end            reduce using rule 80 (statements -> topLevel .)


state 24

    (58) message_definition -> MESSAGE . NAME LBRACE message_body RBRACE

    NAME            shift and go to state 33


state 25

    (31) dotname -> dotname DOT . NAME

    NAME            shift and go to state 34


state 26

    (64) package_directive -> PACKAGE dotname SEMI .

    MESSAGE         reduce using rule 64 (package_directive -> PACKAGE dotname SEMI .)
    EXTEND          reduce using rule 64 (package_directive -> PACKAGE dotname SEMI .)
    ENUM            reduce using rule 64 (package_directive -> PACKAGE dotname SEMI .)
    SERVICE         reduce using rule 64 (package_directive -> PACKAGE dotname SEMI .)
    IMPORT          reduce using rule 64 (package_directive -> PACKAGE dotname SEMI .)
    OPTION          reduce using rule 64 (package_directive -> PACKAGE dotname SEMI .)
    $end            reduce using rule 64 (package_directive -> PACKAGE dotname SEMI .)


state 27

    (81) statements -> statements topLevel .

    MESSAGE         reduce using rule 81 (statements -> statements topLevel .)
    EXTEND          reduce using rule 81 (statements -> statements topLevel .)
    ENUM            reduce using rule 81 (statements -> statements topLevel .)
    SERVICE         reduce using rule 81 (statements -> statements topLevel .)
    IMPORT          reduce using rule 81 (statements -> statements topLevel .)
    OPTION          reduce using rule 81 (statements -> statements topLevel .)
    $end            reduce using rule 81 (statements -> statements topLevel .)


state 28

    (71) option_directive -> OPTION NAME . EQ option_rvalue SEMI

    EQ              shift and go to state 35


state 29

    (63) service_definition -> SERVICE NAME . LBRACE method_definition_opt RBRACE

    LBRACE          shift and go to state 36


state 30

    (49) message_extension -> EXTEND NAME . LBRACE message_body RBRACE

    LBRACE          shift and go to state 37


state 31

    (65) import_directive -> IMPORT STRING_LITERAL . SEMI

    SEMI            shift and go to state 38


state 32

    (45) enum_definition -> ENUM NAME . LBRACE enum_body_opt RBRACE

    LBRACE          shift and go to state 39


state 33
